# Fly

./: .gitignore  .gitmodules  CMakeLists.txt  Fly.sln  readme.md  vcpkg.json
.github/workflows/: BuildRelease.yml
Fly/: Fly.vcxproj  Fly.vcxproj.filters  MP3_Player.ini  Modern_MP3_Player.ini  Window.cpp  imgui.ini  main.cpp
Fly/src/: AudioStreamer.cpp  AudioStreamer.h  AudioVisualizer.cpp  AudioVisualizer.h  FileDialog.cpp  FileDialog.h  MP3Player.cpp  MP3Player.h  MP3Streamer.cpp  MP3Streamer.h  PitchShifter.h  PlayList.cpp  PlayList.h  RoomReverb.h  TonalityControl.cpp  TonalityControl.h  Window.cpp  Window.h  main.cpp  pch.h
Fly/src/containers/: ThreadSafeQueue.h
Fly/src/util/: LogFormatter.cpp  LogFormatter.h  Logger.h  OutputDebugStream.cpp  OutputDebugStream.h
src/: PitchShifter.cpp  RoomReverb.cpp  Window.cpp
src/util/: OutputDebugStream.cpp
